--- a/shared/css/shared.css
+++ b/shared/css/shared.css
@@ -1,10 +1,8 @@
 :root {
-    --feldgrau: #627264ff;
-    --light-green: #8ae788ff;
-    --emerald: #28ce6dff;
-    --emerald-2: #07c563ff;
-    --dark-orange: #ff8811ff;
-    --chocolate-web: #e07000ff;
+    --color-fonts-primary: #627264ff;
+    --color-primary-accent: #8ae788ff;
+    --color-primary: #28ce6dff;
+    --color-secondary: #ff8811ff;
 
     --font-main: "Raleway", sans-serif;
     --font-headers: "EB Garamond", serif;
@@ -25,7 +23,7 @@ html {
 body {
     font-family: var(--font-main);
     margin: 0;
-    color: var(--feldgrau);
+    color: var(--color-fonts-primary);
 }
 a {
     color: black;
@@ -87,13 +85,6 @@ h3 {
 }
 
 /* ******************* || SCROLL BAR ******************* */
-
-/* main::-webkit-scrollbar-track
-{
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-  background-color: white;
-} */
-
 main::-webkit-scrollbar
 {
   width: 10px;
@@ -103,7 +94,7 @@ main::-webkit-scrollbar
 
 main::-webkit-scrollbar-thumb
 {
-  background-color: var(--feldgrau);
+  background-color: var(--color-fonts-primary);
 }
 
 /* ******************* || NAVIGATION ******************* */
@@ -156,7 +147,7 @@ main::-webkit-scrollbar-thumb
 .socials__item a:hover,
 .main-nav__item a:active,
 .socials__item a:active {
-    color: var(--emerald-2);
+    color: var(--color-primary);
 }
 
 .main-footer__content p {
@@ -180,8 +171,8 @@ main::-webkit-scrollbar-thumb
         background-color: transparent;
         border: none;
         z-index: 1;
-        border: 3px solid var(--feldgrau);
-        color: var(--feldgrau);
+        border: 3px solid var(--color-fonts-primary);
+        color: var(--color-fonts-primary);
         border-radius: 5px;
     }
 
@@ -200,6 +191,14 @@ main::-webkit-scrollbar-thumb
         width: 100%;
         overflow-y: scroll;
     }
+    .main-nav__wrapper::-webkit-scrollbar {
+        width: 10px;
+        background-color: transparent;
+    }
+    
+    .main-nav__wrapper::-webkit-scrollbar-thumb {
+        background-color: var(--color-fonts-primary);
+    }
 
     .main-nav__wrapper a {
         color: white;
@@ -207,8 +206,9 @@ main::-webkit-scrollbar-thumb
 }
 
 @media (max-height: 460px) and (min-width: 500px) {
+    
+    
     .main-nav__list {
-
         flex-direction: row;
         justify-content: center;
     }
@@ -227,10 +227,12 @@ main::-webkit-scrollbar-thumb
     /* || LAYOUT */
     body {
         display: flex;
+        height: 100vh;
+        overflow: hidden;
     }
 
     main {
-        height: 100vh;
+        height: 100%;
         flex: 3 1 auto;
         overflow-y: scroll;
     }
@@ -243,6 +245,6 @@ main::-webkit-scrollbar-thumb
 
     .side-navigation {
         flex: 1 0 300px;
-        height: 100vh;
+        height: 100%;
     }
 }
