--- a/skills/skills.css
+++ b/skills/skills.css
@@ -1,10 +1,22 @@
+/* ******************* || SCROLL BAR ******************* */
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--color-fonts-primary);
+}
+/* ******************* SKILLS ******************* */
 #skills {
     padding: 1.5rem 2.5rem 0;
     text-align: center;
 }
 
 .brand-fonts {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
 .skills-item__logos {
@@ -13,7 +25,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 0.5em;
-    column-gap: 1.0em;
+    column-gap: 1em;
     justify-items: center;
 }
 
@@ -42,7 +54,7 @@
 }
 
 .fa-react {
-    color: #61DBFB;
+    color: #61dbfb;
 }
 
 .fa-git-alt {
@@ -58,7 +70,6 @@
 }
 
 @media (min-width: 1150px) {
-
     .skills-container {
         display: grid;
         margin-top: 3rem;
